tests/src/frontend/syntax/invalid/char_escape_too_large.sk
fun main(): String {
  '\U00110000'.toString()
}
